tests/checker/fail/type_definition_ordering_violation.can
Zebra = String

Apple = String

Unit => Program {
    "a" -> Apple
    "z" -> Zebra
    "ok" -> Print
}
